# WeChatBenchmarkAssistant

./: .gitignore  README.md  pyproject.toml  run.py
src/wxdeveloper/: __init__.py  app.py  config.py
src/wxdeveloper/templates/: index.html
