[project]
name = "wxdeveloper"
version = "0.1.0"
description = "微信公众号文章获取工具"
requires-python = ">=3.8"
dependencies = [
    "flask==3.0.2",
    "requests==2.31.0",
    "python-dotenv==1.0.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wxdeveloper"]

[tool.hatch.build]
artifacts = [
    "src/wxdeveloper/templates/*.html",
] 